--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,31 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
-
-.navbar{
-  background-image: linear-gradient(to right, #6A11CB 0%, #2575FC 100%); 
+.navbar {
+	background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
 }
 
-.btn{
-  background: #6A11CB;
-
+.sform {
+	background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
 }
 
-.btn:hover{
-background: white;
-color: #6A11CB;
+.iform {
+	background-image: linear-gradient(to right, rgba(106, 17, 203,.5) 0%, rgba(37, 117, 252,.5) 100%);
+	border: 10px double #6a11cb;
+	border-top-left-radius: 25%;
+	border-bottom-right-radius: 25%;
+	width: 30%;
+	margin: 2% auto;
+	display: flex;
+	justify-content: center;
+}
+
+.btn {
+	background: #6a11cb;
+}
+
+.btn:hover {
+	background: white;
+	color: #6a11cb;
 }
