--- a/src/App.css
+++ b/src/App.css
@@ -62,5 +62,12 @@
 	background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
 }
 
+.centered {
+
+		display: flex;
+		max-width: 80%;
+		flex-flow: wrap;
+		margin: 0 auto;
+}
  
  
